# matplotlibcpp

./: .gitignore  CMakeLists.txt  README.md
inc/: matplotlibcpp.hpp
inc/matplotlibcpp/: animation.hpp  axes.hpp  figure.hpp  pyplot.hpp  util.hpp
test/: test.cpp  test1.cpp
